<resources>
    <string name="app_name">Science Quiz</string>
    <string name="_100">100%</string>
    <string name="menu">Menu</string>
    <string name="kimyo">Chemistry</string>
    <string name="tarix">History</string>
    <string name="adabiyot">Literature</string>
    <string name="english">English</string>
    <string name="fizika">Physics</string>
    <string name="sciences">Sciences</string>
    <string name="matematika">Mathematics</string>
    <string name="quiz_result">Quiz Result</string>
    <string name="appInfo"> "Quiz App maktab darsligi fanlari bo'yicha bilimingizni mustahkamlash uchun yordam beradi. Bu ilovada quyidagi fanlar bo'yicha testlar mavjud.

Fizika: Mexanika, termofizika, elektromagnitizm, optika va boshqa fizika konseptlari.

Tarix: Dunyo tarixi, kishilar tarixi, davlatlar tarixi, urushlar tarixi va boshqalar.

Matematika: Algebra, geometriya, sonlar nazariyasi, funktsiyalar, soliq va boshqalar.

Adabiyot: Adabiyotning mantiqiy va falsafi asoslari, shoir va yozuvchilar tarixi, dunyo adabiyoti, xalq adabiyoti va boshqalar.

Kimyo: Atomlar va molekulalar kimyosi, termodinamika, kimyoviy reaksiyalar, kimyoviy elementlar va ularning xossalari, kimyoviy formulalar va boshqalar.

Ingliz tili: Gaplashish, yozuvning qoidalari, tarjima va boshqa ko'plab mavzular.

Ilovada quyidagi foydali xususiyatlar mavjud:
Foydalanuvchilar uchun shakl bo'yicha test topshirish imkoniyati.
Har bir fanni alohida testlari.
Natijalarni saqlash va o'quvchining rivojlanishini monitoring qilish.
"Quiz App" o'quvchilarga ilmiy fanlar bo'yicha umumiy o'quv materiallarini taqdim etadi va o'rganish, testlarda test topshirish va o'zlarining bilim darajalarini sinash imkoniyatini beradi.</string>
    <string name="version_1_0_0">version 1.0.0</string>
    <string name="quiz_info">Quiz Info</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="wrong_answer">Wrong Answer</string>
    <string name="restart">Restart</string>
    <string name="yout_result">Your Result</string>
    <string name="total_questions">Total Question</string>
    <string name="your_result">Your Result</string>
</resources>
