<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app"
    tools:context=".presentation.win.WinActivity">

    <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
        android:id="@+id/circular_progress"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        app:direction="clockwise"
        app:dotColor="@color/item_color"
        app:dotWidth="16dp"
        app:drawDot="true"
        app:enableProgressAnimation="true"
        app:fillBackground="false"
        app:gradientEndColor="@color/item_color"
        app:gradientType="linear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:progressBackgroundColor="@color/myColor"
        app:progressBackgroundStrokeWidth="16dp"
        app:progressCap="round"
        app:progressColor="#01C6B4"
        app:progressStrokeWidth="16dp"
        app:startAngle="270"
        app:textColor="@color/item_color"
        app:textSize="50sp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/my_font2"
        android:text="@string/yout_result"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/linearCard2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/circular_progress" />
    <TextView
        android:id="@+id/text_foiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/bg_app"
        android:fontFamily="@font/my_font2"
        android:textSize="50sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/circular_progress"
        app:layout_constraintEnd_toEndOf="@id/circular_progress"
        app:layout_constraintStart_toStartOf="@id/circular_progress"
        app:layout_constraintTop_toTopOf="@id/circular_progress" />

    <LinearLayout
        android:id="@+id/linearCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/linearCard2"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearCorrect"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="18dp"
            android:layout_weight="1"
            android:background="@drawable/bg_linear_2"
            android:backgroundTint="#24D32B"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/linearButton"
            app:layout_constraintEnd_toStartOf="@id/linearWrong"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/circular_progress"
            app:layout_constraintVertical_bias="0.35">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.35"
                android:fontFamily="@font/my_font2"
                android:gravity="center"
                android:text="@string/correct_answer"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:ignore="NestedWeights" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:layout_weight="0.7"
                android:background="@drawable/bg_linear_2"
                android:backgroundTint="@color/bg_app">

                <TextView
                    android:id="@+id/corrent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/my_font2"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearWrong"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="36dp"
            android:layout_weight="1"
            android:background="@drawable/bg_linear_2"
            android:backgroundTint="#EF4539"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/linearButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/linearCorrect"
            app:layout_constraintTop_toBottomOf="@id/circular_progress"
            app:layout_constraintVertical_bias="0.35">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.35"
                android:fontFamily="@font/my_font2"
                android:gravity="center"
                android:text="@string/wrong_answer"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:ignore="NestedWeights" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:layout_weight="0.7"
                android:background="@drawable/bg_linear_2"
                android:backgroundTint="@color/bg_app">

                <TextView
                    android:id="@+id/wrong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/my_font2"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearCard2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/linearCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.65"
        app:layout_constraintTop_toBottomOf="@id/circular_progress"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="264dp">

        <LinearLayout
            android:id="@+id/linearNumber"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="18dp"
            android:layout_weight="1"
            android:background="@drawable/bg_linear_2"
            android:backgroundTint="#29B9E1"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/linearButton"
            app:layout_constraintEnd_toStartOf="@id/linearWrong"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/circular_progress"
            app:layout_constraintVertical_bias="0.35">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.35"
                android:fontFamily="@font/my_font2"
                android:gravity="center"
                android:text="@string/total_questions"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:ignore="NestedWeights" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:layout_weight="0.7"
                android:background="@drawable/bg_linear_2"
                android:backgroundTint="@color/bg_app">

                <TextView
                    android:id="@+id/questions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="10"
                    android:fontFamily="@font/my_font2"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearFoiz"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="36dp"
            android:layout_weight="1"
            android:background="@drawable/bg_linear_2"
            android:backgroundTint="#29B9E1"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/linearButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/linearCorrect"
            app:layout_constraintTop_toBottomOf="@id/circular_progress"
            app:layout_constraintVertical_bias="0.35">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.35"
                android:fontFamily="@font/my_font2"
                android:gravity="center"
                android:text="@string/your_result"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:ignore="NestedWeights" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:layout_weight="0.7"
                android:background="@drawable/bg_linear_2"
                android:backgroundTint="@color/bg_app">

                <TextView
                    android:id="@+id/paracent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/my_font2"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/menu"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|center"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="18dp"
            android:layout_weight="1"
            android:background="@drawable/my_color"
            android:fontFamily="@font/my_font2"
            android:text="@string/menu"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/restart"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|center"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="36dp"
            android:layout_weight="1"
            android:background="@drawable/my_color"
            android:fontFamily="@font/my_font2"
            android:text="@string/restart"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>